tests/ui/borrowck/issue-102209.stderr
error: lifetime may not live long enough
  --> $DIR/issue-102209.rs:10:15
   |
LL | impl NfaBuilder<'_> {
   |                 -- lifetime `'2` appears in the `impl`'s self type
LL |     pub fn with<R, F: FnOnce(NfaBuilder<'_>) -> R>(f: F) -> R {
LL |         Brand::with(|brand| {
   |                      ----- has type `Brand<'1>`
LL |             f(Self { brand: brand.lt })
   |               ^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'1` must outlive `'2`
   |
   = note: requirement occurs because of the type `NfaBuilder<'_>`, which makes the generic argument `'_` invariant
   = note: the struct `NfaBuilder<'brand>` is invariant over the parameter `'brand`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error: lifetime may not live long enough
  --> $DIR/issue-102209.rs:10:15
   |
LL | impl NfaBuilder<'_> {
   |                 -- lifetime `'1` appears in the `impl`'s self type
...
LL |             f(Self { brand: brand.lt })
   |               ^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'1` must outlive `'static`

error: aborting due to 2 previous errors

